--- a/caddy.yaml
+++ b/caddy.yaml
@@ -22,6 +22,8 @@ pipeline:
       tag: v${{package.version}}
 
   - runs: |
+      echo "something bad happened"
+      exit 1
       install -m644 -D "./Caddyfile" "${{targets.destdir}}/etc/caddy/Caddyfile"
       install -m755 -D "./index.html" "${{targets.destdir}}/usr/share/caddy/index.html"
 
